test/conformance/kuttl/apply/e2e/apply-multiple-resources/example-policy.yaml
# example-policy.yaml
apiVersion: kyverno.io/v1
kind:  ClusterPolicy
metadata:
  name: example-policy
spec:
  validationFailureAction: enforce
  rules:
  - name: disallow-pod-without-label
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Pods must have a 'team' label."
      pattern:
        metadata:
          labels:
            team: "?*"
