test/conformance/kuttl/apply/e2e/apply-multiple-resources/pod-with-label-1.yaml
# pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod-1
  labels:
    team: engineering12345
spec:
  containers:
  - name: nginx
    image: nginx:latest
