test/conformance/kuttl/apply/e2e/apply-multiple-resources/01-policy-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      if kyverno apply example-policy.yaml --resource pod-with-label-1.yaml --resource pod-with-label-2.yaml 

      then 
        echo "Test succeeded."
        exit 0
      else 
        echo "Test failed"
        exit 1 
      fi
